# toucan

./: .gitignore  README.md  main.py  package-lock.json  package.json  pyproject.toml  railway.json  work.csv
backend/: __init__.py  dependencies.py  main.py  pyproject.toml  railway.json
backend/models/: __init__.py  database.py  task.py  user.py
backend/routers/: __init__.py  auth.py  tasks.py
docs/: docusaurus.config.ts  package-lock.json  sidebars.ts
docs/docs/: intro.mdx
docs/docs/backend/: api.mdx  authentication.mdx  database.mdx  models.mdx
docs/docs/development/: setup.mdx  testing.mdx  workflow.mdx
docs/docs/frontend/: architecture.mdx  components.mdx  realtime.mdx  state-management.mdx  ui-components.mdx
docs/docs/infrastructure/: deployment.mdx  monitoring.mdx
frontend/: .env.production  index.html  nixpacks.toml  package-lock.json  package.json  postcss.config.mjs  railway.json  tailwind.config.js  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  main.tsx  setupTests.ts  supabaseClient.ts  tailwind.css
frontend/src/components/: Auth.tsx  AuthCallback.tsx  AuthError.tsx  CreateTaskForm.tsx  HomeScreen.tsx  PairingScreen.tsx  TaskCard.tsx  TaskList.tsx
frontend/src/mocks/: handlers.ts
frontend/src/store/: authStore.ts  index.ts  notificationStore.ts  pairingStore.ts  taskStore.ts
frontend/src/types/: index.ts
routers/: auth.py
supabase/: config.toml
supabase/.temp/: pooler-url  project-ref
supabase/migrations/: 20240207_create_tasks.sql  20240207_create_updated_at_function.sql  20240207_enable_realtime.sql
(+5 files in other folders)
